[package]
name = "emsplace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-postgres = "0.3.0"
actix-web = "3.3.2"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
serde = "1.0.130"
serde_postgres = "0.2.0"
