[package]
name = "emsplace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-form-data = "0.5.0"
actix-multipart = "0.3.0"
actix-postgres = "0.3.0"
actix-web = "3.3.2"
base64 = "0.13.0"
data-url = "0.1.1"
futures = "0.3.17"
lazy_static = "1.4.0"
mime = "0.3.16"
nanoid = "0.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
serde = "1.0.130"
serde_postgres = "0.2.0"
url = "2.2.2"
uuid = "0.8.2"
