[package]
name = "emsplace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.5.4"
actix-form-data = "0.5.0"
actix-multipart = "0.3.0"
actix-postgres = "0.3.0"
actix-web = "3.3.3"
base64 = "0.13.0"
data-encoding = "2.3.2"
data-url = "0.1.1"
futures = "0.3.17"
hmac = "0.12.0"
http = "0.2.6"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
mime = "0.3.16"
nanoid = "0.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
ring = "0.16.20"
rusoto = "0.24.2"
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
serde = "1.0.130"
serde_postgres = "0.2.0"
sha2 = "0.10.0"
url = "2.2.2"
uuid = "0.8.2"
